src/objects/CEP_BPS__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Strengths__c</fullName>
        <inlineHelpText>Q: What do you consider your strengths as a person, as a student, and as a worker?</inlineHelpText>
        <label>Academic Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>physical health needs, need for further support (i.e. health insurance), etc.</inlineHelpText>
        <label>Additional Comments</label>
        <length>5768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>CEP_BPS_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coping_with_Stress__c</fullName>
        <description>Question: How do you currently cope with stress/emotions, other than treatments and medications? Are there any spiritual or cultural practices that you use?</description>
        <inlineHelpText>Question: How do you currently cope with stress/emotions, other than treatments and medications? Are there any spiritual or cultural practices that you use?</inlineHelpText>
        <label>Coping with Stress</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cultural_Identity__c</fullName>
        <inlineHelpText>Q: What is your cultural identity, and to what extent is it important to you?</inlineHelpText>
        <label>Cultural Identity</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_External_End_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_End_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_End_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Impressions__c</fullName>
        <label>Diagnostic Impressions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genogram__c</fullName>
        <label>Genogram</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health_Issues__c</fullName>
        <inlineHelpText>Mark if participant has had any of the following:</inlineHelpText>
        <label>Health Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abortion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Pain/Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Hearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Sleeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Waking Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digestive Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dizzy Spells/Fainting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eczema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Trauma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headaches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Palpitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implants (organ, bone, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscarriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightmares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pregnancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prenatal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Living_Situation_Detail__c</fullName>
        <inlineHelpText>Include comments on current living situation, history of housing, and any major events that influenced a change in household and/or a move to a new location</inlineHelpText>
        <label>Living Situation (Detail)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Living_Situation_Picklist__c</fullName>
        <label>Living Situation</label>
        <picklist>
            <picklistValues>
                <fullName>Own Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents&apos; Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparents&apos; Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relatives Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shares Household w/friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeless, No Perm Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home/Trans Liv Prgm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home of Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supportive Apartment/Congregate Care Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share with Non-Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter/Undomiciled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With parent(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With other relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With friend(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With non-relative non-friends</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meet_with_Counselor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Question: Would you like to meet with one of our counselors with the Nathaniel Clinic for further assessment?</inlineHelpText>
        <label>Meet with Counselor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_for_MHS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the client present a need for mental health services?</inlineHelpText>
        <label>Need for MHS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_to_Progress__c</fullName>
        <inlineHelpText>Q: What are current issues, obstacles and problems that could hold you back from progressing?</inlineHelpText>
        <label>Obstacles to Progress</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Strengths__c</fullName>
        <description>Q: What do you consider your strengths as a person, as a student, and as a worker?</description>
        <inlineHelpText>Q: What do you consider your strengths as a person, as a student, and as a worker?</inlineHelpText>
        <label>Personal Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrals_Made_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Were referrals made for service?</inlineHelpText>
        <label>Referrals Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrals_Made__c</fullName>
        <label>Referrals Made To:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrals_Not_Made__c</fullName>
        <label>Referrals Not Made Because:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Recommendations__c</fullName>
        <label>Service Recommendations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Six_Month_Goals__c</fullName>
        <inlineHelpText>Question: What goals do you have for yourself 6 months from now?</inlineHelpText>
        <label>Six Month Goals</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spiritual_Identity__c</fullName>
        <inlineHelpText>Q: What is your spiritual identification/life philosophy, and to what extent is it important to you?</inlineHelpText>
        <label>Spiritual Identity</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Traumatic_Events__c</fullName>
        <inlineHelpText>Q: Have you ever experienced any major surgeries or traumatic events?(Examples: witnessed a death, experienced or witnessed a form of abuse, natural disaster, etc.)</inlineHelpText>
        <label>Traumatic Events</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatments__c</fullName>
        <inlineHelpText>What types (if any) of treatments, therapies, medications, or other forms of care have you had?</inlineHelpText>
        <label>Treatments or Other Care</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workforce_Strengths__c</fullName>
        <inlineHelpText>Q: What do you consider your strengths as a person, as a student, and as a worker?</inlineHelpText>
        <label>Workforce Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>aCEP BPS</label>
    <nameField>
        <displayFormat>CBP-{0000}</displayFormat>
        <label>CEP  BPS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aCEP BPS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>